Add: Login page

--- a/login.html
+++ b/login.html
@@ -2,5 +2,18 @@
     <head>
         <link rel = "stylesheet" href = "style.css">
     </head>
-    <body> </body>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
+    <body>
+        <div class = "login-page">
+            <div class = "form">
+                <img class="fundooImage" src="fundoo.png">
+                <br></br>
+                <form class="login-form"> 
+                    <input type="text" placeholder="Username">
+                    <input type="password" placeholder="Password">
+                    <button>LOGIN</button>
+                    <p class="message">Create Account <a href="registration.html">Register</a></p>
+                </form>
+                </div>
+        </div>  
+    </body>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
 </html>
