Refactor: Input type button to submit in form

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
                 <form class="login-form"> 
                     <input type="text" placeholder="Username">
                     <input type="password" placeholder="Password">
-                    <button>LOGIN</button>
+                    <input id="button" type="submit" value="LOGIN">
                     <p class="message">Create Account <a href="registration.html">Register</a></p>
                 </form>
                 </div>
