--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
                 <input type="text" placeholder="Name">
                 <input type="text" placeholder="EmailId">
                 <input type="text" placeholder="Password">
-                <button>CREATE</button>
+                <input id="button" type="submit" value="CREATE">
                 <p class="message">Already Registered? <a href="login.html">Login</a></p>
             </form>
         </div>
