Add: Redirect to success page on login successful

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
             <div class = "form">
                 <img class="fundooImage" src="fundoo.png">
                 <br></br>
-                <form class="login-form"> 
+                <form class="login-form" action="successpage.html"> 
                     <input type="text" placeholder="Username">
                     <input type="password" placeholder="Password">
                     <input id="button" type="submit" value="LOGIN">
