--- a/registration.html
+++ b/registration.html
@@ -1,16 +1,20 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
 </head>
 <body>
     <div class="login-page">
         <div class="form">
             <img class="fundooImage" src="fundoo.png">
             <br></br>
-            <form class="registration-form">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="EmailId">
-                <input type="text" placeholder="Password">
+            <form class="registration-form" onsubmit="return validation()">
+                <input type="text" id="username" placeholder="Name">
+                <span id="nameerror" class="text-danger font-weight-bold"></span>
+                <input type="text" id="useremail" placeholder="EmailId"> 
+                <span id="emailerror" class="text-danger font-weight-bold"></span>
+                <input type="text" id="userpassword" placeholder="Password" >
+                <span id="passworderror" class="text-danger"></span>
                 <input id="button" type="submit" value="CREATE">
                 <p class="message">Already Registered? <a href="login.html">Login</a></p>
             </form>
