--- a/registration.html
+++ b/registration.html
@@ -7,15 +7,14 @@
     <div class="login-page">
         <div class="form">
             <img class="fundooImage" src="fundoo.png">
-            <br></br>
-            <form class="registration-form" onsubmit="return validation()">
-                <input type="text" id="username" placeholder="Name">
+            <form class="registration-form" onsubmit="return validation()" method="POST" >
+                <input type="text" name="username" placeholder="Name">
                 <span id="nameerror" class="text-danger font-weight-bold"></span>
-                <input type="text" id="useremail" placeholder="EmailId"> 
+                <input type="text" name="useremail" placeholder="EmailId"> 
                 <span id="emailerror" class="text-danger font-weight-bold"></span>
-                <input type="text" id="userpassword" placeholder="Password" >
+                <input type="text" name="userpassword" placeholder="Password" >
                 <span id="passworderror" class="text-danger"></span>
-                <input id="button" type="submit" value="CREATE">
+                <input name="button" type="submit" value="CREATE">
                 <p class="message">Already Registered? <a href="login.html">Login</a></p>
             </form>
         </div>
